--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+derive_setters = "0.1.7"
+image = "0.25.6"
 ratatui = "0.29.0"
+ratatui-image = "8.0.0"
