--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ derive_setters = "0.1.7"
 image = "0.25.6"
 ratatui = "0.29.0"
 ratatui-image = "8.0.0"
-rand = "0.8.5"
+rand = "0.9.1"
 tokio = { version = "1.45.1", features = ["full"] }
+anyhow = "1.0.98"
+urlqstring = "0.3.5"
+isahc = { version = "1.7.2", features = ["cookies"] }
+lazy_static = "1.5.0"
+openssl = "0.10.73"
+base64 = "0.22.1"
+hex = "0.4.3"
