--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "ncm-tui"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+once_cell = "1.21.3"
 derive_setters = "0.1.7"
 image = "0.25.6"
 ratatui = "0.29.0"
+lazy_static = "1.5.0"
 ratatui-image = "8.0.0"
 rand = "0.8.5"
 tokio = { version = "1.45.1", features = ["full"] }
+signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
+libc = "0.2.173"
+anyhow = "1.0.98"
+futures-util = "0.3.31"
+crossterm = { version = "0.29.0", features = ["event-stream"] }
