--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,15 @@ ratatui-image = "8.0.1"
 serde = "1.0.219"
 serde_json = "1.0.140"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
+strum = "0.27"
+strum_macros = "0.27"
+time = "0.3.41"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = [
+    "fmt",
+    "local-time",
+    "chrono",
+] }
+tracing-appender = "0.2"
 tokio = { version = "1.45.1", features = ["full"] }
 urlqstring = "0.3.5"
