--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ hex = "0.4.3"
 image = "0.25.6"
 isahc = { version = "1.7.2", features = ["cookies"] }
 libc = "0.2.174"
+lofty = "0.22.4"
 once_cell = "1.21.3"
 openssl = "0.10.73"
 rand = "0.9.1"
@@ -24,12 +25,12 @@ signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 strum = "0.27"
 strum_macros = "0.27"
 time = "0.3.41"
+tokio = { version = "1.45.1", features = ["full"] }
 tracing = "0.1"
+tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = [
     "fmt",
     "local-time",
     "chrono",
 ] }
-tracing-appender = "0.2"
-tokio = { version = "1.45.1", features = ["full"] }
 urlqstring = "0.3.5"
