--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ openssl = "0.10.73"
 rand = "0.9.1"
 ratatui = "0.29.0"
 ratatui-image = "8.0.1"
+rodio = "0.20.1"
 serde = "1.0.219"
 serde_json = "1.0.140"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
