--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow             = "1.0"
 base64             = "0.22"
 crossterm          = { version = "0.29", features = ["event-stream"] }
 derive_setters     = "0.1"
+dirs = "6.0.0"
 futures-util       = "0.3"
 hex                = "0.4"
 image              = "0.25"
@@ -33,5 +34,6 @@ tracing-subscriber = { version = "0.3", features    = [
     "fmt",
     "local-time",
     "chrono",
+    "env-filter",
 ] }
 urlqstring         = "0.3.5"
