--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,6 @@
-[package]
-name = "ncm-tui"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["mineral", "crates/*"]
+resolver = "2"
 
-[dependencies]
-anyhow             = "1.0"
-base64             = "0.22"
-crossterm          = { version = "0.29", features = ["event-stream"] }
-derive_setters     = "0.1"
-dirs = "6.0.0"
-futures-util       = "0.3"
-hex                = "0.4"
-image              = "0.25"
-isahc              = { version = "1.7", features  = ["cookies"] }
-libc               = "0.2"
-lofty              = "0.22"
-once_cell          = "1.21"
-openssl            = "0.10"
-rand               = "0.9"
-ratatui            = "0.29"
-ratatui-image      = "8.0"
-rodio              = "0.20"
-serde              = "1.0"
-serde_json         = "1.0"
-signal-hook-tokio  = { version = "0.3", features  = ["futures-v0_3"] }
-strum              = "0.27"
-strum_macros       = "0.27"
-time               = "0.3"
-tokio              = { version = "1.45.1", features = ["full"] }
-tracing            = "0.1"
-tracing-appender   = "0.2"
-tracing-subscriber = { version = "0.3", features    = [
-    "fmt",
-    "local-time",
-    "chrono",
-    "env-filter",
-] }
-urlqstring         = "0.3.5"
+[workspace.metadata]
+name = "mineral"
