--- a/crates/mineral-config/Cargo.toml
+++ b/crates/mineral-config/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow         = "1.0"
-config_rs      = { package = "config", version = "0.15" }
-once_cell      = "1.21"
-serde          = { version = "1.0", features   = ["derive"] }
-tracing        = "0.1"
-derive-getters = "0.5"
-mineral-platform = { path = "../mineral-platform" }
+anyhow         = { workspace = true }
+config_rs      = { workspace = true }
+once_cell      = { workspace = true }
+serde          = { workspace = true }
+tracing        = { workspace = true }
+derive-getters = { workspace = true }
+
+mineral-platform = { workspace = true }
